Compose tests excluded my default