@@ -1,3 +1,6 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+import org.jetbrains.exposed.gradle.setupDialectTest
 import org.jetbrains.kotlin.gradle.dsl.KotlinJvmCompile
 import tanvd.kosogor.proxy.publishJar
 
@@ -42,3 +45,16 @@ publishJar {
         }
     }
 }
+
+tasks.withType(Test::class.java) {
+    jvmArgs = listOf("-XX:MaxPermSize=256m")
+    testLogging {
+        events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
+        showStandardStreams = true
+        exceptionFormat = TestExceptionFormat.FULL
+    }
+}
+
+val dialect: String by project
+
+setupDialectTest(dialect)
